<resources>
    <string name="app_name">Arosaje</string>
    <string name="entrer_le_nom_de_la_plante">Entrer le nom de la plante</string>
    <string name="text1">Arosaje</string>
    <string name="login">S\'identifier</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">S\'inscrire</string>
    <string name="click_to_login">Déjà inscrit? Cliquez pour vous identifiez</string>
    <string name="clic_to_register">Pas de compte? cliquez pour vous inscire</string>
    <string name="gardiennage">Gardiennage</string>
    <string name="logout">deconnexion</string>
    <string name="mes_plantes">Mes Plantes</string>
    <string name="a_rosa_je">A\'Rosa-je</string>
    <string name="forget_password">Mot de passe oublié?</string>
    <string name="email1">Email</string>
    <string name="link_send">Recevoir le lien</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
</resources>